# DBUS_receiver

./: CMakeLists.txt  Main.qml  main.cpp  receiver.cpp  receiver.h
